--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "dependencies": {
     "element-plus": "^1.0.2-beta.70",
+    "github-markdown-css": "^4.0.0",
+    "highlight.js": "^11.2.0",
+    "keyboardjs": "^2.6.4",
+    "marked": "^2.1.3",
     "sass": "^1.37.5",
     "sass-loader": "^12.1.0",
     "vue": "^3.0.5"
